Bookmark was removed, because it is not working.

--- a/Apache-OpenOffice-Calc-for-Enterprise-Use.tex
+++ b/Apache-OpenOffice-Calc-for-Enterprise-Use.tex
@@ -1,13 +1,12 @@
 \documentclass[runningheads,14pt,a4paper,openany]{book}
 
 % Добавя възможност за сензитивни хипер-връзки в самия документ.
-\usepackage[linktocpage=true]{hyperref}
+\usepackage[linktocpage=true,bookmarks=false]{hyperref}
 \usepackage{nameref}
 \usepackage[utf8x]{inputenc}
 \usepackage[english,bulgarian]{babel}
 \usepackage{url}
 \usepackage{lipsum}
-\usepackage{bookmark}
 % Според изискванията на ИИКТ-БАН не бива да има номерация на страниците в ръкописа.
 %\usepackage{nopageno}
 \usepackage{shorttoc}
@@ -21,6 +20,7 @@
 \usepackage{pdfpages}
 % Служи за управление на заглавията.
 \usepackage{fancyheadings}
+%\usepackage{bookmark}
 
 % Добавени от доц. Вера Ангелова.
 %\usepackage{amsmath,amssymb,amsthm}
