Initial version for the first chapter was done and small part of the second chapter was done.

--- a/Apache-OpenOffice-Calc-for-Enterprise-Use.tex
+++ b/Apache-OpenOffice-Calc-for-Enterprise-Use.tex
@@ -111,6 +111,7 @@
 
 \include{chapters/introduction}
 \include{chapters/chapter01}
+\include{chapters/chapter02}
 \include{chapters/conclusion}
 
 % Списък с използвана литература и източници на информация.
